fixed the algolia autocomplete alignment

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -70,7 +70,7 @@
 #search-bar {
   margin-bottom: -39px;
   margin-top: -14px;
-  width: 350px;
+  width: 316px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -79,6 +79,3 @@
   padding-top: 6px;
 }
 
-#address-id {
-  font-size: 16px;
-}
